fix:css navbar on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -129,7 +129,7 @@ p{
         font-size: .8rem;
         margin: 0 auto;
         position: fixed;
-        bottom: 1rem;
+        bottom: 2rem;
         top: unset;
         left: 50%;
         transform: translateX(-50%);
